# falcon

./: .gitignore  README.md
apps/: asm.labels  output.f32
apps/paint/: asm.labels  output.f32  paint.fpl
assembler/: CMakeLists.txt  assemble.c  disassemble.c  example.f32  execute.c  f32_defs.h  f32_defs2.h  f32asm.c  f32asm.h  f32dis.c  f32sim.c  host_interface.c  isa.txt  labels.txt  lex.c  main.c  process_font.c  util.c
binutils/: CMakeLists.txt  example.f32  isa.txt  readme.md
binutils/src/: assemble.c  disassemble.c  execute.c  f32.h  f32asm.c  f32dis.c  f32sim.c  filesys.c  host_interface.c  token.c  util.c
cars/: a.f32  labels.txt  load_img.fpl  processImage.py
compiler/: CmakeLists.txt  a.f32  labels.txt  regress.py
compiler/src/: AST.c  AST.h  AST_Binop.c  AST_Identifier.c  AST_IntLiteral.c  AST_assign.c  AST_binop.c  AST_cast.c  AST_clause.c  AST_decl.c  AST_for.c  AST_funccall.c  AST_if.c  AST_index.c  AST_intlit.c  AST_member.c  AST_new.c  AST_pointer.c  AST_repeat.c  AST_return.c  AST_strlit.c  AST_struct.c  AST_symbol.c  AST_unary.c  AST_while.c  Ast_assign.cpp  Ast_binop.cpp  Ast_block.cpp  Ast_declaration.cpp  Ast_funccall.cpp  Ast_identifier.cpp  Ast_index.cpp  Ast_intlit.cpp  Ast_member.cpp  Ast_top.cpp  Ast_unary.cpp  Ast_while.cpp  CMakeLists.txt  ast.h  block.c  (+23 more)
compiler/testcases/: codegen_assign.test  codegen_if.test  codegen_memberfunc.test  codegen_repeat.test  codegen_while.test  parse_assign.test  parse_if.test  parse_repeat_nobody.test  parse_while.test  peephole_memfunc.test  peephole_repeat.test  typecheck_expr.test  typecheck_expr_error.test  typecheck_index.test  typecheck_member.test  typecheck_memberfunc.test
compiler_bak/: a.f32  regress.py
compiler_bak/src/: AST.c  AST.h  AST_assign.c  AST_assignOp.c  AST_binop.c  AST_decl.c  AST_index.c  AST_list.c  AST_member.c  AST_repeat.c  AST_symbol.c  AST_unary.c  AST_while.c  TODO  bitmap.c  dummy.c  fpl.c  fpl.h  gen_assembly.c  instr.h  livemap.c  location.h  regalloc.c  symbol.c  typecheck.c  types.h
compiler_bak/test_outputs/: codegen_assign.exp  codegen_if.exp  codegen_memberfunc.exp  codegen_new.exp  codegen_pointer.exp  codegen_repeat.exp  codegen_while.exp  lex.exp  parse_assign.exp  parse_expression.exp  parse_fun.exp  parse_if.exp  parse_memberfunc.exp  parse_repeat.exp  parse_repeat_nobody.exp  parse_repeat_nountil.exp  parse_while.exp  parse_while_error.exp  peephole_if.exp  peephole_memfunc.exp  peephole_repeat.exp  peephole_while.exp  typecheck_consteval.exp  typecheck_expr.exp  typecheck_expr_error.exp  typecheck_funccall.exp  typecheck_index.exp  typecheck_member.exp  typecheck_memberfunc.exp  typecheck_return_errors.exp  typecheck_while.exp
compiler_bak/testcases/: codegen_assign.test  codegen_assignOp.test  codegen_new.test  codegen_pointer.test  codegen_repeat.test  lex.test  parse_expression.test  parse_fun.test  parse_memberfunc.test  parse_repeat.test  parse_repeat_nountil.test  parse_while_error.test  peephole_if.test  peephole_memfunc.test  peephole_while.test  typecheck_consteval.test  typecheck_funccall.test  typecheck_return_errors.test  typecheck_while.test
compiler_bak2/: regress.py
compiler_bak2/src/: AST.c  AST_Binop.c  AST_Declaration.c  AST_Function.c  AST_Identifier.c  AST_IntLiteral.c  AST_Parameter.c  AST_Top.c  AST_Typename.c  AST_list.c  Block.c  CMakeLists.txt  Symbol.c  example.fpl  fpl.h  lexer.c  main.c  parser.y  type.c  utils.c
compiler_bak2/testcases/: parse_declaration.fpl  parse_func_decl.fpl  parse_simple_expression.fpl  typecheck_simple_expr.fpl
fplcomp/: AluOp.cs  Ast.cs  AstAssign.cs  AstBinop.cs  AstBlock.cs  AstCharLit.cs  AstClass.cs  AstConst.cs  AstDeclaration.cs  AstDelete.cs  AstEq.cs  AstExpression.cs  AstFor.cs  AstForIn.cs  AstFuncCall.cs  AstFuncCallStatement.cs  AstFunction.cs  AstIdentifier.cs  AstIf.cs  AstIfClause.cs  AstIfExpr.cs  AstIndex.cs  AstIntLit.cs  AstMember.cs  AstNew.cs  AstNullSupress.cs  AstParameter.cs  AstPrint.cs  AstRc.cs  AstRealLit.cs  AstRepeat.cs  AstReturn.cs  AstStatement.cs  AstStringLit.cs  AstTop.cs  AstType.cs  AstTypeArray.cs  AstTypeFunction.cs  AstTypeIdentifier.cs  AstTypeNullable.cs  (+31 more)
fplcomp/apps/: Terminal.fpl  forward_declaration.fpl  paint.fpl
fplcomp/stdlib/: FileSystem.fpl  List.fpl  Memory.fpl  String.fpl  StringBuffer.fpl  StringBuilder.fpl  files.lst  graphics.fpl  keyboard.fpl  print.f32  start copy.f32  start.f32
fplcomp/testcases/: array.fpl  class.fpl  (+73 more)
os/: a.f32  asm.labels  counter  counter.f32  hello  hello.fpl  labels.txt  main.fpl  output.f32  regress.py  rom.dis  test2.txt
rtl/: TODO.txt  a.txt  analyze.py  asm.labels  f32.vh  gtkw.gtkw  gtkwave.gtkw  keyboard.v  labels.txt  plot_rgb.py  regress.py  rom.dis  sdram_commands.txt
vscode_extension/: .gitignore  CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
(+161 files in other folders)
